    - added property "premiumMinimumAmount"
- InsuranceOptionsBenefitPeriodType (Removed)
- InsuranceOptionsBenefitScopeType (Removed)
- InsuranceOptionsEmployeesType (Removed)
- InsuranceOptionsVariousType (Changed)
    - properties "premiumRateGuaranty", "renunciationTerminationRightClaim", "annualCancellation", "surplusParticipation" are now optional
- MedicalExpensesHospitalType (Added)
- OfferCustomerType (Changed)
    - NOGACodeMain is now optional
    - Added property "SUVACompany"
- OfferDSBType (Changed)
    - renamed property "fixedPayrolls" to "personMentionedByName"
    - Added mandatory property "riskCharacteristic" (moved from CompanyCustomerType)
    - all properties of "insuranceOptions" are mandatory
    - added property "premiumOverviewDSB"
    - property "maxSalary" in "personGroups" is mandatory
- OfferNlpiConclusionDecisionDataType (Changed)
    - Added mandatory constants processName, subProcessName and processVersion
- OfferNlpiDataType (Changed)
    - Added mandatory constants processName, subProcessName and processVersion
    - Added mandatory property "insurerContact"
    - Added property "combinationMeta"
    - removed property "premiumOverview"
    - added property "netPremiumNLPITotal"
    - one of the properties "NOGACodeMain" and "UVGRiskNo" in "customer" is now mandatory
    - renamed property "offerAttachementDokument" to "otherAttachementDocument"
- OfferNlpiFeedbackDataType (Changed)
    - Added mandatory constants processName, subProcessName and processVersion
- OfferNlpiRequestDataType (Changed)
    - added attribute "brokerContact" (moved to BrokerType)
    - "offerToDate" renamed to "offerDeadline" and now mandatory
    - Added mandatory constants processName, subProcessName and processVersion
    - Added property "combinationMeta"
    - Property "offerLanguage" is now mandatory
    - removed property "previousInsurer" (moved into DSB, UVGCompulsory, UVGSupplement)
    - removed property "UVGCompulsoryInsurer"