@@ -1,84 +1,78 @@
 {
-	"$schema": "https://json-schema.org/draft/2019-09/schema",
-	"description": "Offer NLPI feedback",
-	"type": "object",
-	"properties": {
-		"processIdentificationNo": {
-			"$ref": "../../../Generics/v0.5.0/ProcessIdentificationNoType.json"
-		},
-		"timestamp": {
-			"$ref": "../../../Generics/v0.5.0/TimestampType.json"
-		},
-		"processName": {
-			"description": "Name of the process",
-			"const": "offer.nlpi"
-		},
-		"subProcessName": {
-			"description": "Name of the subprocess",
-			"const": "feedback"
-		},
-		"processVersion": {
-			"description": "Version of the process",
-			"const": "0.5.0"
-		},
-		"header": {
-			"$ref": "../../../Generics/v0.5.0/HeaderType.json"
-		},
-		"customer": {
-			"$ref": "../../../Generics/v0.5.0/CompanyCustomerType.json"
-		},
-		"quotationNo": {
-			"$ref": "../../../Generics/v0.5.0/QuotationNoType.json"
-		},
-		"offerDecision": {
-			"description": "Decision whether an offer is accepted or rejected",
-			"type": "object",
-			"properties": {
-				"offerAcceptance": {
-					"$ref": "../offer-nlpi-types/OfferAcceptanceType.json"
-				},
-				"offerRejection": {
-					"$ref": "../offer-nlpi-types/OfferRejectionType.json"
-				}
-			},
-			"dependencies": {
-				"offerAcceptance": {
-					"not": {
-						"required": [
-							"offerRejection"
-						]
-					}
-				},
-				"offerRejection": {
-					"not": {
-						"required": [
-							"offerAcceptance"
-						]
-					}
-				}
-			},
-			"additionalProperties": false
-		},
-		"offerFeedbackMessage": {
-			"$ref": "../../../Generics/v0.5.0/RestrictedStringType.json",
-			"description": "Feedback text for the offer acceptance or rejection decision"
-		},
-		"brokerContact": {
-			"$ref": "../../../Generics/v0.5.0/ContactType.json"
-		}
-	},
-	"additionalProperties": false,
-	"required": [
-		"processIdentificationNo",
-		"timestamp",
-		"processName",
-		"subProcessName",
-		"processVersion",
-		"header",
-		"customer",
-		"quotationNo",
-		"offerDecision",
-		"brokerContact"
-	],
-	"unevaluatedProperties": false
+  "$schema": "https://json-schema.org/draft/2019-09/schema",
+  "description": "Offer NLPI feedback",
+  "type": "object",
+  "properties": {
+    "processIdentificationNo": {
+      "$ref": "../../../Generics/v0.5.0/ProcessIdentificationNoType.json"
+    },
+    "timestamp": {
+      "$ref": "../../../Generics/v0.5.0/TimestampType.json"
+    },
+    "processName": {
+      "description": "Name of the process",
+      "const": "offer.nlpi"
+    },
+    "subProcessName": {
+      "description": "Name of the subprocess",
+      "const": "feedback"
+    },
+    "processVersion": {
+      "description": "Version of the process",
+      "const": "0.5.0"
+    },
+    "header": {
+      "$ref": "../../../Generics/v0.5.0/HeaderType.json"
+    },
+    "quotationNo": {
+      "$ref": "../../../Generics/v0.5.0/QuotationNoType.json"
+    },
+    "offerDecision": {
+      "description": "Decision whether an offer is accepted or rejected",
+      "type": "string",
+      "enum": [
+        "Offer accepted",
+        "Offer rejected"
+      ]
+    },
+    "offerAcceptance": {
+      "$ref": "../offer-nlpi-types/OfferAcceptanceType.json"
+    },
+    "offerFeedbackMessage": {
+      "$ref": "../../../Generics/v0.5.0/RestrictedStringType.json",
+      "description": "Feedback text for the offer acceptance or rejection decision"
+    },
+    "brokerContact": {
+      "$ref": "../../../Generics/v0.5.0/ContactType.json"
+    }
+  },
+  "additionalProperties": false,
+  "required": [
+    "processIdentificationNo",
+    "timestamp",
+    "processName",
+    "subProcessName",
+    "processVersion",
+    "header",
+    "quotationNo",
+    "offerDecision",
+    "brokerContact"
+  ],
+  "allOf": [
+    {
+      "if": {
+        "properties": {
+          "offerDecision": {
+            "const": "Offer accepted"
+          }
+        }
+      },
+      "then": {
+        "required": [
+          "offerAcceptance"
+        ]
+      }
+    }
+  ],
+  "unevaluatedProperties": false
 }
