@@ -1,88 +1,36 @@
 {
-	"$schema": "https://json-schema.org/draft/2019-09/schema",
-	"description": "Offer acceptance",
-	"type": "object",
-	"properties": {
-		"offerDocument": {
-			"type": "object",
-			"properties": {
-				"digitalSignedOffer": {
-					"description": "Is offer digitally signed",
-					"type": "boolean"
-				},
-				"digitalSignedDocument": {
-					"description": "Digitally signed document",
-					"type": "array",
-					"minItems": 1,
-					"items": {
-						"$ref": "../../../Generics/v0.5.0/FileType.json"
-					}
-				},
-				"physicalSignedDocument": {
-					"description": "Physically signed document",
-					"type": "array",
-					"minItems": 1,
-					"items": {
-						"$ref": "../../../Generics/v0.5.0/FileType.json"
-					}
-				}
-			},
-			"if": {
-				"properties": {
-					"digitalSignedOffer": {
-						"const": true
-					}
-				}
-			},
-			"then": {
-				"required": [
-					"digitalSignedDocument"
-				]
-			},
-			"else": {
-				"required": [
-					"physicalSignedDocument"
-				]
-			},
-			"required": [
-				"digitalSignedOffer"
-			],
-			"additionalProperties": false
-		},
-		"offerAttachmentDocument": {
-			"description": "Additional signed or non-signed documents e.g. flyers, product fact sheets, health questionnaire",
-			"type": "object",
-			"properties": {
-				"digitalSignedDocument": {
-					"description": "Digitally signed document",
-					"type": "array",
-					"minItems": 1,
-					"items": {
-						"$ref": "../../../Generics/v0.5.0/FileType.json"
-					}
-				},
-				"physicalSignedDocument": {
-					"description": "Physically signed document",
-					"type": "array",
-					"minItems": 1,
-					"items": {
-						"$ref": "../../../Generics/v0.5.0/FileType.json"
-					}
-				},
-				"otherAttachments": {
-					"description": "List of non signed attachments",
-					"type": "array",
-					"minItems": 1,
-					"items": {
-						"$ref": "../../../Generics/v0.5.0/FileType.json"
-					}
-				}
-			},
-			"additionalProperties": false
-		}
-	},
-	"required": [
-		"offerDocument"
-	],
-	"additionalProperties": false
+  "$schema": "https://json-schema.org/draft/2019-09/schema",
+  "description": "Offer acceptance",
+  "type": "object",
+  "properties": {
+    "offerDocument": {
+      "type": "object",
+      "properties": {
+        "signedOffer": {
+          "description": "Is offer signed",
+          "type": "boolean"
+        },
+        "signedDocument": {
+          "description": "Signed document",
+          "type": "array",
+          "minItems": 1,
+          "items": {
+            "$ref": "../../../Generics/v0.5.0/FileType.json"
+          }
+        }
+      },
+      "required": [
+        "signedOffer"
+      ],
+      "additionalProperties": false
+    },
+    "otherAttachmentDocument": {
+      "description": "Additional signed or non-signed documents e.g. flyers, product fact sheets, health questionnaire",
+      "$ref": "../../../Generics/v0.5.0/MultiFileType.json"
+    }
+  },
+  "required": [
+    "offerDocument"
+  ],
+  "additionalProperties": false
 }
