@@ -1,15 +1,0 @@
-{
-  "$schema": "https://json-schema.org/draft/2019-09/schema",
-  "description": "Offer rejection",
-  "type": "object",
-  "properties": {
-    "offerRejectionReason": {
-	  "$ref": "../../../Generics/v0.5.0/RestrictedStringType.json",
-      "description": "Reason for rejection of offer"
-    }
-  },
-  "required": [
-    "offerRejectionReason"
-  ],
-  "additionalProperties": false
-}
